resolved alignment issue on input form

--- a/public/trainer.css
+++ b/public/trainer.css
@@ -5,6 +5,7 @@ h1 {
     font-style: italic;
     height: 30px;
     font-size: 50px;
+    
 }
 
 body {
@@ -16,16 +17,30 @@ body {
  
     
 }
+
+img { 
+    float: right;
+    margin-top: 10px;
+    margin-left: 40px;
+    margin-bottom: 60px;
+    padding: 10px;
+    height: auto;
+    width: 50%;
+    color: white;
+    border: 10px solid lightgrey;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .inputForm {
     color: white;
     font-style:inherit;
-    float: left;  
+    float: Left;  
     margin: 10px;
-    padding: 20px;
+    padding: 10px;
     border: 5px solid rgb(90, 4, 4);
     font-family: Arial, Helvetica, sans-serif;
-
-
+    min-width: 400px;
+    
  }
 .box {
     float: right;
@@ -75,17 +90,5 @@ main {
 }
 
 
-img { 
-    
-    float: right;
-    margin-left: 40px;
-    margin-bottom: 40px;
-    padding: 10px;
-    height: auto;
-    width: 50%;
-    color: white;
-    border: 10px solid lightgrey;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 
